--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>vue-todolist</title>
+    <script
+      src="https://kit.fontawesome.com/852b770f58.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div id="app"></div>
